# calibrate-camera-system

./: .gitignore  README.md  calibration.json  cameras_configs.json  core.py  pyproject.toml  run.py  test_output.py  try.py
calibrate_camera_system/: calibration.py  core.py  datamodel.py  targets.py
calibration_data/: .gitignore
calibration_data/calibration_targets/: target-checkerboard.json
calibration_data/target_parameters/checkerboard/: target.json
data/: target.yaml
target_data/: target.json
tests/: test_datamodel.py
