[tool.poetry]
name = "calibrate-camera-system"
version = "0.1.0"
description = ""
authors = ["kristina-aino <kristina.ai@proton.me>"]
readme = "README.md"
packages = [{include = "calibrate_camera_system"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
