[tool.poetry]
name = "calibrate-camera-system"
version = "1.0.0"
description = ""
authors = ["kristina-aino <kristina.ai@proton.me>"]
readme = "README.md"
packages = [{include = "calibrate_camera_system"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
device-capture-system = {path = "../device-capture-system/dist/device_capture_system-1.1.0.tar.gz"}
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
